--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,24 @@
-# steps:
-#   - name: Install SSH Key
-#     uses: shimataro/ssh-key-action@v2
-#     with:
-#       key: ${{ secrets.SSH_PRIVATE_KEY }} 
-#       known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+on: 
+  push:
+    branches:
+      - main
+      
+jobs:
+  deploy_to_server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy with rsync
+        run: rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html
+
+
+
+
+
