--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }} 
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+#         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          run: ssh-keyscan -H ec2-34-229-203-137.compute-1.amazonaws.com >> ~/.ssh/known_hosts
+        
 
       - name: Deploy with rsync
         run: rsync -avz ./dist/ ubuntu@ec2-34-229-203-137.compute-1.amazonaws.com:/var/www/html
